--- a/conf/app.conf
+++ b/conf/app.conf
@@ -213,6 +213,12 @@ log.request.output = stderr
 
 
 
+module.gorm = github.com/revel/modules/gorm
+db.import = github.com/lib/pq
+db.driver = postgres
+db.spec = ${DATABASE_URL}
+
+
 ################################################################################
 # Section: prod
 # This section is evaluated when running Revel in production mode. Like so:
@@ -256,3 +262,9 @@ log.error.flags = 3
 # Example:
 #   log.request.output = %(app.name)s-request.log
 log.request.output = off
+
+module.gorm = github.com/revel/modules/gorm
+db.import = github.com/lib/pq
+db.driver = postgres
+db.spec = ${DATABASE_URL}
+
